# bank_account_operations

./: README.md  config.py  main.py  pyproject.toml  requirements.txt
src/: main_class.py  utils.py
tests/: test_trans.json  test_utils.py
