[tool.poetry]
name = "bank-account-operations"
version = "0.1.0"
description = ""
authors = ["ncgordeev <ncgordeev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
flake8-html = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
